BUG FIX white space appearing above nav bar - found an error in the css body;margin-top FIXED

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body {
     color: #777777;
     }   
 
-
 #welcome {
     text-align: center;
     font-family: Lato, sans-serif;
@@ -108,7 +107,9 @@ body {
 
 /* ------------------------------------------------- Nav Bar ----*/
 .navbar {
-    background-color: #401d35;
+   background-color: #401d35;
+    
+}
 }
 #navbarNavDropdown {
     background-color: #401d35;
@@ -136,6 +137,7 @@ body {
 }
 
 .navbar-brand {
+    margin-top: 0px;
     background-color: #401d35;
     font-family: lato, sans-serif;
     font-weight: 900;
@@ -313,9 +315,6 @@ margin-right: 25%;
 
 /* ------------------------------------------------- Classes page and timetable ----*/
 /*Credit: Css taken from: https://www.bootdey.com/snippets/view/time-table#html and edited for this project ----*/
-body{
-    margin-top:20px;
-}
 .bg-light-gray {
     background-color: #f7f7f7;
 }
